chore: prepare the standalone soap service
Signed-off-by: ollie314 <mehdi.lefebvre@gmail.com>